--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,10 @@
     "paths": {
       "@/*": [
         "src/*"
-      ]
+      ],
+      "#/*": [
+        "src/components/*"
+      ],
     },
     "lib": [
       "esnext",
