--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
     "vue": "^2.6.14"
   },
@@ -23,8 +25,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
-    "less": "^4.0.0",
-    "less-loader": "^8.0.0",
+    "less": "^4.1.3",
+    "less-loader": "5.0.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
